# vocameet

./: .gitignore  README.md  package-lock.json
backend/: .gitignore  pyproject.toml
backend/db/: init_db.py  models.py  test_queries.py  voice_ai.db
backend/src/: .gitignore  AppDatabase.py  add_dummy_data_to_db.py  agent.py  calendar_service.py  main.py  requirements.txt  retrieve_users_data.py  vocameet.db
backend/src/agent/: agent.py
backend/src/db/: AppDatabase.py  add_availability_and_unavailability.py  add_data_in_db.py
backend/src/services/: calendar_service.py
frontend/: .npmrc  .prettierignore  .prettierrc  app-config.ts  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: Providers.tsx  globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/Integrations/: page.tsx
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/api/connection-details/: route.ts
frontend/app/api/google/events/: route.ts
frontend/app/api/livekit/token/: route.ts
frontend/app/components/: GoogleSignInButton.tsx  layout.tsx
frontend/app/context/: UserContext.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/features/: page.tsx
frontend/components/: app.tsx  google-login-button.tsx  livekit-voice-panel.tsx  meeting-card.tsx  meetings-sidebar.tsx  session-view.tsx  transcript-panel.tsx  upcoming-events.tsx  upcoming-meetings.tsx  welcome.tsx
frontend/components/ui/: Footer.tsx  NavBar.tsx  seperator.tsx
frontend/hooks/: useMeetings.ts
frontend/lib/: auth.ts  session.ts
frontend/types/: next-auth.d.ts
