[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-starter-python"
version = "1.0.0"
description = "Simple voice AI assistant"
requires-python = ">=3.11"

dependencies = [
    "livekit-agents[openai,turn-detector,silero,cartesia,deepgram]~=1.2",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv",
    "google-auth", # <--- ADDED THIS LINE
    "google-auth-oauthlib", # <--- ADDED THIS LINE (for OAuth support)
    "google-api-python-client",
    "livekit-plugins-azure~=1.2", # <--- ADD THIS LINE
    "fastapi[all]>=0.116.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "authlib==1.3.0",
    "python-jose[cryptography]==3.3.0",
    "cryptography==41.0.7",
    "redis==5.0.1",
    "python-multipart>=0.0.18,<1.0.0",
    # Security and token management
    "PyJWT==2.8.0",
    "passlib[bcrypt]==1.7.4",
    # Session management
    "itsdangerous==2.1.2",
    "sqlalchemy>=2.0.43",
]


[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
